# sdk-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml
.github/workflows/: integration-test.yml  pypi-publish-on-release.yml  test-lint.yml
src/strands/event_loop/: streaming.py
src/strands/models/: bedrock.py
src/strands/tools/: executor.py
src/strands/tools/mcp/: mcp_client.py
src/strands/types/: _events.py  citations.py  exceptions.py  media.py
tests/strands/event_loop/: test_streaming.py
tests/strands/models/: test_bedrock.py
tests_integ/models/: test_model_bedrock.py
